--- a/prototypes/dash/index.html
+++ b/prototypes/dash/index.html
@@ -51,13 +51,16 @@
 								</button>
 							</div>
 							<div class="modal-body">
-								<p>Choose a model to upload</p>
-								<input name="molUpload" type="file">
-								<br>
-								<br><small>.mol files only</small>
+								<div class="input-group mb-3">
+									<div class="custom-file">
+										<input type="file" class="custom-file-input" id="molUpload">
+										<label class="custom-file-label" for="molUpload" id="molUploadLabel">Choose a .mol file</label>
+									</div>
+								</div>
+								<small style="color: red; display: none;">Please upload a valid .mol file</small>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-primary">Upload</button>
+								<button type="button" class="btn btn-primary" id="molUploadButton" disabled>Upload</button>
 							</div>
 						</div>
 					</div>
