added populated list of molecules w/ unique IDs

--- a/prototypes/dash/index.html
+++ b/prototypes/dash/index.html
@@ -38,8 +38,10 @@
 			</div>
 
 			<div id="page-main" style="display: none;">
-				<p>This is when you're signed in!</p>
+				<p>Upload a molecule to get started!</p>
 				<button type="button" class="btn btn-outline-primary btn-large" data-target="#upload-modal" data-toggle="modal">Upload</button>
+
+				<hr>
 
 				<div class="modal fade" id="upload-modal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel" aria-hidden="true">
 					<div class="modal-dialog" role="document">
@@ -64,7 +66,11 @@
 							</div>
 						</div>
 					</div>
-</div>
+				</div>
+
+				<div id="page-table">
+					
+				</div>
 			</div>
 
 		</div>
