fixed delete functionality

--- a/prototypes/dash/index.html
+++ b/prototypes/dash/index.html
@@ -40,7 +40,7 @@
 			</div>
 
 			<div id="page-main" style="display: none;">
-				<p>Upload a molecule to get started! <a href="#">Hello</a></p>
+				<p>Upload a molecule to get started!</p>
 				<button type="button" class="btn btn-outline-primary btn-large" data-target="#upload-modal" data-toggle="modal">Upload</button>
 
 				<hr>
