--- a/prototypes/dash/index.html
+++ b/prototypes/dash/index.html
@@ -49,7 +49,7 @@
 					<div class="modal-dialog" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
-								<h5 class="modal-title" id="exampleModalLabel">Upload Molecule</h5>
+								<h5 class="modal-title" id="uploadModalLabel">Upload Molecule</h5>
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 									<span aria-hidden="true">&times;</span>
 								</button>
@@ -65,6 +65,27 @@
 							</div>
 							<div class="modal-footer">
 								<button type="button" class="btn btn-primary" id="molUploadButton" disabled>Upload</button>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="modal fade" id="rename-modal" tabindex="-1" role="dialog" aria-labelledby="renameModalLabel" aria-hidden="true">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="renameModalLabel">Rename Molecule</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								<div class="input-group mb-3">
+									<input type="text" class="form-control" placeholder="Molecule" id="renameInput" aria-label="Molecule">
+								</div>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-primary" id="molRenameButton">Rename</button>
 							</div>
 						</div>
 					</div>
