removed '.mol' from the default molecule name automatically

--- a/prototypes/dash/index.html
+++ b/prototypes/dash/index.html
@@ -112,4 +112,15 @@
 		<script src="js/main.js"></script>
 	</body>
 
+	<style>
+		td .mol-edit, td .mol-delete {
+			color: #666;
+			transition: 0.5s;
+		}
+
+ 		td .mol-edit:hover, td .mol-delete:hover {
+			 color: #333;
+		}
+	</style>
+
 </html>
