add titles to VR and AR viewing pages

--- a/ar/index.html
+++ b/ar/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
+
+		<title>AR</title>
+
 		<meta charset="UTF-8">
 
 		<!-- jQuery Slim (for Firebase functionality) -->
