--- a/vr/index.html
+++ b/vr/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
+
+		<title>VR</title>
+
 		<meta charset="UTF-8">
 
 		<!-- jQuery Slim (for Firebase functionality) -->
