created read-only dashboard

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 				<p>Upload a molecule to get started!</p>
 				<button type="button" class="btn btn-outline-primary btn-large" data-target="#upload-modal" data-toggle="modal">Upload</button>
 
+				<p class="mt-3">To view a dashboard of your molecules, visit <a href="dash" id="read-dash">this link</a>.</p>
+
 				<p class="mt-3">To view a molecule in augmented reality, point your device's camera at <a href="ar/markers/w_marker.pdf" download>this marker</a>.</p>
 
 				<hr>
