update marker link

--- a/dash/index.html
+++ b/dash/index.html
@@ -32,7 +32,7 @@
 
 			<div id="page-main">
 				
-				<p class="mt-3">To view a molecule in augmented reality, point your device's camera at <a href="ar/markers/w_marker.pdf" download>this marker</a>.</p>
+				<p class="mt-3">To view a molecule in augmented reality, point your device's camera at <a href="../ar/markers/w_marker.pdf" download>this marker</a>.</p>
 
 				<hr>
 
