added favicon to subpages

--- a/dash/index.html
+++ b/dash/index.html
@@ -14,7 +14,7 @@
 
 		<title>MolXR</title>
 
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="icon" type="image/x-icon" href="../favicon.ico">
 	</head>
 
 	<body>
