--- a/vr/index.html
+++ b/vr/index.html
@@ -5,6 +5,7 @@
 		<title>VR</title>
 
 		<meta charset="UTF-8">
+		<link rel="icon" type="image/x-icon" href="../favicon.ico">
 
 		<!-- jQuery Slim (for Firebase functionality) -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
