--- a/dash/index.html
+++ b/dash/index.html
@@ -12,15 +12,22 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
 		 crossorigin="anonymous">
 
+		 <!-- Custom CSS -->
+		 <link rel="stylesheet" href="../css/main.css">
+
 		<title>MolXR</title>
 
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand navbar-dark bg-dark py-3">
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark py-3">
 			<div class="container">
 				<a class="navbar-brand" href="/./molXR">MolXR</a>
+				
+				<ul class="navbar-nav align-center">
+					<li class="nav-item d-flex align-items-center m-auto"><a href="demo" id="class-demo" class="my-2 mb-2 mx-2 my-md-0">Demo</a></li>
+				</ul>
 			</div>
 		</nav>
 
