integrated GLmol into VR page

--- a/vr/index.html
+++ b/vr/index.html
@@ -25,7 +25,7 @@
 
 		<!-- P5 Sketch -->
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
-		<script language="javascript" type="text/javascript" src="../MOLLoader.js"></script>
+		<script language="javascript" type="text/javascript" src="../libraries/GLmol.js"></script>
 
 		<!-- custom styles -->
 		<style>
