--- a/vr/index.html
+++ b/vr/index.html
@@ -14,6 +14,12 @@
 		<!-- FireBase Script -->
 		<script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
 
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+			crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+		 crossorigin="anonymous">
+
 		<!-- P5 ../libraries -->
 		<script language="javascript" type="text/javascript" src="../libraries/p5.js"></script>
 
@@ -36,6 +42,34 @@
 		</style>
 	</head>
 	<body>
+
+		<button type="button" class="btn btn-outline-light btn-lg" style="position: absolute; top: 0; left: 0; z-index: 1;" data-toggle="modal" data-target="#settingsModal"><i class="fas fa-cog"></i></button>
+
+		<div class="modal fade" id="settingsModal" tabindex="-1" role="dialog" aria-labelledby="settingsModalLabel" aria-hidden="true" style="position: absolute;">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="settingsModalLabel">Settings</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body text-center">
+						<p class="lead">Select Viewing Mode:</p>
+						<select onchange="renderScene('#VRScene', this.value)" style="text-align-last: center">
+							<option value="ball-stick">Ball & Stick</option>
+							<option value="spheres">van der Waals Spheres</option>
+						</select>
+
+						<hr>
+
+						<p class="lead">Select Rotation Speed:</p>
+						<p id="rotationDisplay">0.30</p>
+						<input type="range" min="0" max="1" value="0.3" step="0.05" oninput="$('#rotationDisplay').html(parseFloat(this.value).toFixed(2)); rotationSpeed = this.value;">
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- container to hold our VR scene - make sure to give this element an ID of 'VRScene' -->
 	    <a-scene id="VRScene">
@@ -60,6 +94,9 @@
 			<a-sky color="#000"></a-sky>
 
 		</a-scene>
+
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+			crossorigin="anonymous"></script>
 
 	</body>
 </html>
