--- a/demo/index.html
+++ b/demo/index.html
@@ -28,7 +28,7 @@
 
 		<!-- P5 Sketch -->
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
-		<script language="javascript" type="text/javascript" src="../MOLLoader.js"></script>
+		<script language="javascript" type="text/javascript" src="../libraries/GLmol.js"></script>
 
 		<!-- custom styles -->
 		<style>
@@ -43,26 +43,9 @@
 		<!-- container to hold our VR scene - make sure to give this element an ID of 'VRScene' -->
 		<a-scene id="ARScene" embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono;'>
 
-	    	<!--
-		       The 'a-assets' container is used to load in any external artwork you may want to use as "textures" for your objects.
-		       Ensure that this element has an ID of 'VRAssets'
-
-		       Textures can be loaded by creating a new 'a-asset' tag inside of the 'a-assets' container.
-		       When doing this you will need to make sure to give your textures a unique ID -
-		       this will be used by p5 to create new objects.
-
-		       Example:
-
-		       <img id="ITEM_ID_GOES_HERE" src="images/gold_block.png">
-			-->
-
 			<a-assets id="VRAssets">
 
 			</a-assets>
-
-			<a-marker id="oxycontin-marker" preset="custom" url="markers/oxycontin.patt"></a-marker>
-			<a-marker id="caffeine-marker" preset="custom" url="markers/caffeine.patt"></a-marker>
-			<a-marker id="hydrocortisone-marker" preset="custom" url="markers/hydrocortisone.patt"></a-marker>
 
 			<a-entity camera></a-entity>
 
