--- a/dash/index.html
+++ b/dash/index.html
@@ -26,7 +26,7 @@
 				<a class="navbar-brand" href="/./molXR">MolXR</a>
 				
 				<ul class="navbar-nav align-center">
-					<li class="nav-item d-flex align-items-center m-auto"><a href="demo" id="class-demo" class="my-2 mb-2 mx-2 my-md-0">Demo</a></li>
+					<li class="nav-item d-flex align-items-center m-auto"><a href="../demo" id="class-demo" class="my-2 mb-2 mx-2 my-md-0">Demo</a></li>
 				</ul>
 			</div>
 		</nav>
