added MolXR marker & firebase tools for deployment

--- a/ar/index.html
+++ b/ar/index.html
@@ -82,7 +82,7 @@
 
 			</a-assets>
 
-			<a-marker id="w-marker" preset="custom" url="markers/w_marker.pat"></a-marker>
+			<a-marker id="molxr-marker" preset="custom" url="markers/molxr_marker.pat"></a-marker>
 
 			<a-entity camera></a-entity>
 
