--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark py-3">
         <div class="container">
-            <a class="navbar-brand" href="/./molXR">MolXR</a>
+            <a class="navbar-brand" href=".">MolXR</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
