added help documentation

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 
 
             <div id="page-welcome">
-                <p>Sign in using the button in the upper-right corner to begin!</p>
+                <p>MolXR is a project created and guided by professors <a href="https://as.nyu.edu/content/nyu-as/as/faculty/trace-jordan.html">Trace Jordan</a> & <a href="https://cims.nyu.edu/~kapp/">Craig Kapp</a> at NYU, and developed by <a href="https://wmonahan.com/">Will Monahan</a>.</p>
+                
+                <p>MolXR is designed as a tool to help students to visualize molecular structures using virtual and augmented reality. No installation is required, and users can log in using a Google account in the top-right-hand corner of this page.</p>
+                
+                <p>For more information about using MolXR, as well as how it works, please visit our <a href="/./help">help page</a>.</p>
             </div>
 
             <div id="page-main" style="display: none;">
