--- a/dash/index.html
+++ b/dash/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="/./css/main.css">
 
-    <title>MolXR</title>
+    <title>MolXR - Dash</title>
 
-    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/./favicon.ico">
 </head>
 
 <body class="d-flex flex-column justify-content-between">
