added demo button to homepage

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
 
             <div id="page-welcome">
+                <a role="button" class="btn btn-lg btn-primary mx-auto d-block" href="/./demo">Click Here to use Classroom Demo</a>
+                <hr>
+                
                 <p>MolXR is a project created and guided by professors <a href="https://as.nyu.edu/content/nyu-as/as/faculty/trace-jordan.html">Trace Jordan</a> & <a href="https://cims.nyu.edu/~kapp/">Craig Kapp</a> at NYU, and developed by <a href="https://wmonahan.com/">Will Monahan</a>.</p>
                 
                 <p>MolXR is designed as a tool to help students to visualize molecular structures using virtual and augmented reality. No installation is required, and users can log in using a Google account in the top-right-hand corner of this page.</p>
