added files to test inversion techniques (not working yet)

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,7 +27,7 @@
 
 		<!-- A-Frame ../libraries -->
 		<script language="javascript" type="text/javascript" src="../libraries/aframe.min.js"></script>
-		<script language="javascript" type="text/javascript" src="../libraries/aframe-ar.js"></script>
+		<script language="javascript" type="text/javascript" src="../prototypes/inversion/ar.js"></script>
 
 		<!-- AFrameP5 library -->
 		<script language="javascript" type="text/javascript" src="../libraries/aframep5_ar.js"></script>
