rename van der Waals Spheres to Space-Filling Model

--- a/vr/index.html
+++ b/vr/index.html
@@ -57,8 +57,8 @@
 					<div class="modal-body text-center">
 						<p class="lead">Select Viewing Mode:</p>
 						<select onchange="renderScene('#VRScene', this.value)" style="text-align-last: center">
-							<option value="ball-stick">Ball & Stick</option>
-							<option value="spheres">van der Waals Spheres</option>
+							<option value="ball-stick">Ball & Stick Model</option>
+							<option value="spheres">Space-Filling Model</option>
 						</select>
 
 						<hr>
