--- a/ar/index.html
+++ b/ar/index.html
@@ -61,8 +61,8 @@
 					<div class="modal-body text-center">
 						<p class="lead">Select Viewing Mode:</p>
 						<select onchange="renderScene('a-marker', this.value)">
-							<option value="ball-stick">Ball & Stick</option>
-							<option value="spheres">van der Waals Spheres</option>
+							<option value="ball-stick">Ball & Stick Model</option>
+							<option value="spheres">Space-Filling Model</option>
 						</select>
 
 						<hr>
