--- a/demo/index.html
+++ b/demo/index.html
@@ -63,8 +63,8 @@
 					<div class="modal-body text-center">
 						<p class="lead">Select Viewing Mode:</p>
 						<select onchange="$.each(molecules,(i,m)=>{renderScene(m,this.value)})">
-							<option value="ball-stick">Ball & Stick</option>
-							<option value="spheres">van der Waals Spheres</option>
+							<option value="ball-stick">Ball & Stick Model</option>
+							<option value="spheres">Space-Filling Model</option>
 						</select>
 
 						<hr>
