--- a/demo/index.html
+++ b/demo/index.html
@@ -33,6 +33,7 @@
 		<script language="javascript" type="text/javascript" src="../libraries/aframep5_ar.js"></script>
 
 		<!-- P5 Sketch -->
+		<script language="javascript" type="text/javascript" src="molecules.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 		<script language="javascript" type="text/javascript" src="../libraries/GLmol.js"></script>
 
