--- a/vr/index.html
+++ b/vr/index.html
@@ -24,7 +24,7 @@
 		<script language="javascript" type="text/javascript" src="../libraries/p5.js"></script>
 
 		<!-- A-Frame ../libraries -->
-		<script language="javascript" type="text/javascript" src="../libraries/aframe.min.js"></script>
+		<script language="javascript" type="text/javascript" src="../libraries/aframe_0.8.2.min.js"></script>
 
 		<!-- AFrameP5 library -->
 		<script language="javascript" type="text/javascript" src="../libraries/aframep5.js"></script>
